[package]
name = "supertonic-tts"
version = "0.1.0"
edition = "2021"

[dependencies]
# ONNX Runtime
ort = "2.0.0-rc.7"

# Array processing (like NumPy)
ndarray = { version = "0.17", features = ["rayon"] }
rand = "0.8"
rand_distr = "0.4"

# Parallel processing
rayon = "1.10"

# Audio processing
hound = "3.5"
rustfft = "6.2"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"

# Unicode normalization
unicode-normalization = "0.1"

# Regular expressions
regex = "1.10"

# System calls
libc = "0.2"

# Server dependencies
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
bytes = "1.0"
sha2 = "0.10"
hex = "0.4"

[[bin]]
name = "server"
path = "src/server.rs"

